Closed
Bug 1174414
Opened 10 years ago
Closed 10 years ago
dom/ipc/ContentParent.cpp:82:10: fatal error: 'mozilla/ProfileGatherer.h' file not found (non-SPS)
Categories
(Core :: Gecko Profiler, defect)
Tracking
()
RESOLVED
FIXED
mozilla41
Tracking | Status | |
---|---|---|
firefox41 | --- | fixed |
People
(Reporter: jbeich, Assigned: ted)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
On platforms lacking SPS profiler (Linux/PPC, BSDs, Solaris) the build is broken because only GeckoProfiler.h is exported under tools/profiler/.
dom/ipc/ContentParent.cpp:82:10: fatal error:
'mozilla/ProfileGatherer.h' file not found
#include "mozilla/ProfileGatherer.h"
^
1 error generated.
Updated•10 years ago
|
Assignee: nobody → mconley
Comment 3•10 years ago
|
||
r=me on the patch you've linked to.
Assignee | ||
Comment 4•10 years ago
|
||
bug 1174414 - Fix build without profiler. r?mconley
Attachment #8622511 -
Flags: review?(mconley)
Assignee | ||
Updated•10 years ago
|
Assignee: mconley → ted
Comment 5•10 years ago
|
||
Comment on attachment 8622511 [details]
MozReview Request: bug 1174414 - Fix build without profiler. r?mconley
https://reviewboard.mozilla.org/r/11365/#review9751
Ship It!
Attachment #8622511 -
Flags: review?(mconley) → review+
Assignee | ||
Comment 6•10 years ago
|
||
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in
before you can comment on or make changes to this bug.
Description
•