bug 1174414 - Fix build without profiler. r=mconley

--HG--
extra : commitid : 9feSETPZSKa
extra : rebase_source : 025c9a8bdfee42be8926a87b8e6f9da51c0134c5